<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:animateLayoutChanges="true">

    <ImageView
        android:id="@+id/drag_line"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:srcCompat="@drawable/item_drag_line"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="60dp"
        android:contentDescription="@string/drag_line" />

    <TextView
        android:id="@+id/header"
        app:layout_constraintTop_toBottomOf="@id/drag_line"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_search_header"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/under_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_search_under_header"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/lato_regular"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_search"
        app:startIconDrawable="@drawable/icon_edittext_preview"
        app:errorIconDrawable="@drawable/icon_edittext_error"
        app:errorIconTint="@color/red_300"
        app:layout_constraintTop_toBottomOf="@id/under_header"
        android:layout_marginTop="30dp"
        android:paddingBottom="100dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>