<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    >

    <ImageView
        android:id="@+id/drag_line"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        app:srcCompat="@drawable/item_drag_line"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="110dp"
        android:contentDescription="@string/drag_line" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/drag_line"
        android:elevation="2dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_field"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_ver_code"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_layout"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/code_field"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/code_button"
        app:layout_constraintTop_toBottomOf="@id/code_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ready_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/code_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="ready"
        />

    <Space
        app:layout_constraintTop_toBottomOf="@id/ready_button"
        android:layout_width="match_parent"
        android:layout_height="500dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>