<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/drag_line_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="2dp"
        android:layout_marginHorizontal="150dp"
        android:layout_marginTop="15dp"
        >
        <ImageView
            android:id="@+id/drag_line"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:src="@drawable/item_drag_line_dark_grey"
            android:contentDescription="@string/drag_line"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/drag_line_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/saved_articles_header"
        android:layout_marginTop="20dp"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:fontFamily="@font/lato_semibold"
        />
    <TextView
        android:id="@+id/under_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="@id/header"
        app:layout_constraintEnd_toEndOf="@id/header"
        android:text="@string/saved_articles_desc"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:fontFamily="@font/lato_medium"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/under_header"
        android:clipToPadding="true"
        tools:listitem="@layout/recycler_item_saved_news"
        />

</androidx.constraintlayout.widget.ConstraintLayout>