<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true">


    <ImageView
        android:id="@+id/drag_line"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:srcCompat="@drawable/item_drag_line"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="60dp"
        android:contentDescription="@string/drag_line" />

    <TextView
        android:id="@+id/header"
        app:layout_constraintTop_toBottomOf="@id/drag_line"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/dialog_settings_header"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/under_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/dialog_setting_under_header"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/lato_regular"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:paddingBottom="20dp"
        />
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/lang_container"
        app:layout_constraintTop_toBottomOf="@id/under_header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/sort_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lang_container"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/date_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sort_container"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Space
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/date_container"
        android:layout_height="200dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>