<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <include layout="@layout/layout_back_button"
        android:id="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/HeaderText"
        android:text="@string/header_auth_name"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/under_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/underheader_auth_nickname"
        android:textSize="16sp"
        android:fontFamily="@font/jost_light"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="@id/header"
        app:layout_constraintEnd_toEndOf="@id/header"
        android:textColor="@color/grey"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/under_header"
        app:layout_constraintStart_toStartOf="@id/header"
        app:layout_constraintEnd_toEndOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:errorIconDrawable="@drawable/icon_error_mark"
        app:helperText="@string/hint_dialog_input_field_nickname"
        app:layout_constraintVertical_bias="0.14"
        >
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_underscore_black"
            android:letterSpacing="0.1"
            android:fontFamily="@font/jost_medium"
            android:inputType="textPersonName"
            android:textSize="32sp"
            android:gravity="center|bottom"
            android:maxLength="10"
            android:cursorVisible="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/RedContinueButton"
        app:layout_constraintTop_toBottomOf="@id/input_layout"
        app:layout_constraintStart_toStartOf="@id/header"
        app:layout_constraintEnd_toEndOf="@id/header"
        android:layout_marginTop="50dp"
        android:text="@string/continue_text"
        />

</androidx.constraintlayout.widget.ConstraintLayout>