<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/recycler_main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipToPadding="false"
    tools:layout_height="match_parent"
    >
    <ImageView
        android:id="@+id/url_photo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        android:adjustViewBounds="true"
        android:layout_margin="15dp"
        android:contentDescription="@string/article_photo"
        android:outlineProvider="paddedBounds"
        android:elevation="8dp"
        tools:src="@drawable/icon_edittext_error"
        tools:layout_height="200dp"
    />

    <TextView
        android:id="@+id/title_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@id/url_photo"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/title_text_color"
        android:textSize="36sp"
        android:paddingHorizontal="15dp"
        android:fontFamily="@font/lato_heavy"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        tools:text="Заголовок"
        />
    <TextView
        android:id="@+id/desc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/title_page"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/lato_heavy"
        android:textColor="@color/black"
        android:paddingTop="15dp"
        android:paddingHorizontal="15dp"
        />
    <TextView
        android:id="@+id/desc_page"
        app:layout_constraintTop_toBottomOf="@id/desc_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_semibold"
        android:textSize="16sp"
        android:textColor="@color/preview_text_color"
        android:paddingBottom="15dp"

        android:layout_marginHorizontal="15dp"
        android:paddingTop="5dp"
        tools:text="Капибары — социальные животные, живущие группами по 10—20 особей. Группы состоят из доминирующего самца, нескольких взрослых самок (со своей внутренней иерархией), детёнышей и подчиненных самцов, находящихся на периферии группы. 5—10 % капибар, преимущественно самцов, живут в одиночку"
        />

    <TextView
        android:id="@+id/publishedat_page"
        app:layout_constraintTop_toBottomOf="@id/desc_page"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textColor="@color/back_text_color"
        android:paddingHorizontal="15dp"
        android:textSize="12sp"
        android:fontFamily="@font/lato_medium"
        android:paddingBottom="5dp"
        tools:text="00:00 21 июля"
        />

    <TextView
        android:id="@+id/author_page"
        app:layout_constraintTop_toBottomOf="@id/desc_page"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textColor="@color/back_text_color"
        android:textSize="12sp"
        android:fontFamily="@font/lato_medium"
        android:paddingBottom="15dp"
        android:paddingHorizontal="15dp"
        tools:text="Фамилия имя"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/url_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="15dp"
        android:text="@string/url_text"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
